# portex-v2

./: .gitignore  DEPLOY.md  LICENSE  README.md  compose.yml  install.sh  test_e2e.sh
portex_rust/: .gitignore  Cargo.toml  Dockerfile  README.md
portex_rust/crates/cli/: Cargo.toml
portex_rust/crates/cli/src/: args.rs  config.rs  local.rs  main.rs  tunnel.rs
portex_rust/crates/common/: Cargo.toml
portex_rust/crates/common/src/: frame.rs  lib.rs  proto.rs
portex_rust/crates/gateway/: Cargo.toml
portex_rust/crates/gateway/src/: auth.rs  config.rs  ingress.rs  main.rs  metrics.rs  proxy.rs  registry.rs  tls.rs  tunnel.rs
portex_rust/crates/gateway/src/acme/: cloudflare.rs  mod.rs
portex_server/portex/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  requirements.txt
portex_server/portex/app/: admin.py  constants.py  models.py  services.py  signals.py  tasks.py  views.py
portex_server/portex/app/migrations/: 0001_initial.py  0002_codebase_rank.py  0003_downloadapp.py  0004_downloadapp_info.py  0005_authtoken_reservedsubdomain.py
portex_server/portex/config/: celery.py  settings.py  urls.py
portex_server/portex/media/: install.sh
portex_server/portex/static/: main.js  style.css
portex_server/portex/templates/: dashboard.html  index.html  login.html
