[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/gateway",
    "crates/cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Khasan712/portex"

[workspace.dependencies]
portex-common = { path = "crates/common" }

tokio = { version = "1", features = ["full"] }
bytes = "1"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
instant-acme = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
arc-swap = "1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["parsing", "formatting"] }
x509-parser = "0.16"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
