[package]
name = "portex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "portex"
path = "src/main.rs"

[dependencies]
portex-common.workspace = true
tokio.workspace = true
bytes.workspace = true
quinn.workspace = true
rustls.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
